MDEV-7860: EXPLAIN FORMAT=JSON crashes for loose scan query

(Based on original patch by Sanja Byelkin)
Make the code that produces JSON output handle LooseScan quick select.

The output we produce is compatible with MySQL 5.6.